--- a/lan.html
+++ b/lan.html
@@ -78,7 +78,7 @@
     /* Tên */
     .name-wrap{ width:100%; position:relative }
     .name-svg{ width:100%; height:16dvh }
-    .name-text{ font-family:'Dancing Script',cursive; font-weight:700; font-size:clamp(32px,9vw,64px); fill:url(#nameGradientLight); filter: drop-shadow(0 2px 4px rgba(0,0,0,.12)) }
+    .name-text{ font-family:'Dancing Script',cursive; font-weight:700; font-size:clamp(40px,11vw,80px); fill:url(#nameGradientLight); filter: drop-shadow(0 2px 4px rgba(0,0,0,.12)) }
 
     /* Lời chúc */
     .blurb{ color:#2b2b2b; font-size:clamp(14px,3.8vw,18px); line-height:1.7; background:rgba(255,255,255,.98);
@@ -190,7 +190,7 @@
         <img class="sticker s4" alt="🎂" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f382.svg"/>
         Chúc Lan một ngày sinh nhật đón tuổi mới ngập tràn nắng ấm như những bông hướng dương nhỏ. Mong mọi ước mơ dịu dàng đều nảy mầm, công việc suôn sẻ, nụ cười luôn rực rỡ. Chúc em bình an, mạnh khỏe và hạnh phúc🌻🎉.
       </p>
-      <p style="font-size=10px;">bên dưới vẫn còn nữa nheee</p>
+      <p style="font-size:10px;">bên dưới vẫn còn nữa nheee</p>
     </div>
     
     <button class="up-arrow" id="toLove" aria-label="Sang trang tỏ tình">
